fix server lifecycle and diagnostics handling